--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "0.1.0",
   "private": false,
   "scripts": {
-    "cypress:open:local": "cypress open",
-    "cypress:open:staging": "cypress open --env configFile=staging",
-    "cypress:open:production": "cypress open --env configFile=production",
-    "cypress:test:local": "cypress-tags run -e TAGS='@local'",
-    "cypress:test:staging": "cypress-tags run -e TAGS='@staging' -e configFile=staging",
-    "cypress:test:production": "cypress-tags run -e TAGS='@production' -e configFile=production",
-    "cypress:test:jenkins": "cypress-tags run -e TAGS='@local' -e configFile=jenkins",
+    "cypress:open:local": "CYPRESS_ENV=true cypress open",
+    "cypress:open:staging": "CYPRESS_ENV=true cypress open --env configFile=staging",
+    "cypress:open:production": "CYPRESS_ENV=true cypress open --env configFile=production",
+    "cypress:test:local": "CYPRESS_ENV=true cypress run --spec **/integration/*.feature",
+    "cypress:test:staging": "CYPRESS_ENV=true cypress run  --spec **/e2e/*.feature --env configFile=staging",
+    "cypress:test:production": "CYPRESS_ENV=true cypress run --spec **/e2e/*.feature --env configFile=production",
+    "cypress:test:jenkins": "CYPRESS_ENV=true cypress run --spec **/integration/*.feature --env configFile=jenkins",
     "cypress:report": "allure generate allure-results --clean -o allure-report && allure open allure-report"
   },
   "dependencies": {
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
-    "cypress": "3.4.1",
-    "cypress-cucumber-preprocessor": "1.16.0",
+    "cypress": "4.2.0",
+    "cypress-cucumber-preprocessor": "1.19.1",
     "eslint": "5.16.0",
     "mocha": "6.2.0",
     "mocha-allure-reporter": "1.4.0"
