--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "cypress:open:local": "CYPRESS_ENV=true cypress open",
     "cypress:open:staging": "CYPRESS_ENV=true cypress open --env configFile=staging",
     "cypress:open:production": "CYPRESS_ENV=true cypress open --env configFile=production",
-    "cypress:test:local": "CYPRESS_ENV=true cypress run --spec **/integration/*.feature",
-    "cypress:test:staging": "CYPRESS_ENV=true cypress run  --spec **/e2e/*.feature --env configFile=staging",
-    "cypress:test:production": "CYPRESS_ENV=true cypress run --spec **/e2e/*.feature --env configFile=production",
-    "cypress:test:jenkins": "CYPRESS_ENV=true cypress run --spec **/integration/*.feature --env configFile=jenkins",
-    "cypress:report": "allure generate allure-results --clean -o allure-report && allure open allure-report"
+    "cypress:test:local": "CYPRESS_ENV=true cypress run --spec **/*.feature",
+    "cypress:test:staging": "CYPRESS_ENV=true cypress run  --spec **/*.feature --env configFile=staging",
+    "cypress:test:production": "CYPRESS_ENV=true cypress run --spec **/*.feature --env configFile=production",
+    "cypress:test:jenkins": "CYPRESS_ENV=true cypress run --spec **/*.feature --env configFile=jenkins",
+    "cypress:report": "allure generate allure-results --clean -o allure-report && allure open allursne-report"
   },
   "dependencies": {
     "babel-core": "7.0.0-bridge.0",
