--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "cypress:test:staging": "CYPRESS_ENV=true cypress run  --spec **/*.feature --env configFile=staging",
     "cypress:test:production": "CYPRESS_ENV=true cypress run --spec **/*.feature --env configFile=production",
     "cypress:test:jenkins": "CYPRESS_ENV=true cypress run --spec **/*.feature --env configFile=jenkins",
-    "cypress:report": "allure generate allure-results --clean -o allure-report && allure open allursne-report"
+    "cypress:report": "allure generate allure-results --clean -o allure-report && allure open allure-report"
   },
   "dependencies": {
     "babel-core": "7.0.0-bridge.0",
