--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "cypress:test:jenkins": "NO_COLOR=1 CYPRESS_ENV=true ./node_modules/.bin/cypress-tags run --env TAGS=\"@<define-tag>\" --env configFile=jenkins",
     "cypress:test:staging": "NO_COLOR=1 CYPRESS_ENV=true ./node_modules/.bin/cypress-tags run --env TAGS=\"@e2e\" --env configFile=staging",
     "cypress:test:production": "NO_COLOR=1 CYPRESS_ENV=true ./node_modules/.bin/cypress-tags run --env TAGS=\"@e2e\" --env configFile=production",
-    "cypress:report": "allure generate allure-results --clean -o allure-report && allure open allure-report"
+    "cypress:report": "allure generate allure-results --clean -o allure-report && allure open allure-report",
+    "cypress:visdiff": "NO_COLOR=1 CYPRESS_ENV=true percy exec -- cypress run --spec **/visual-diffs/*.feature --env configFile=staging"
   },
   "dependencies": {
     "babel-core": "7.0.0-bridge.0",
+    "@percy/cli": "1.0.0-beta.68",
+    "@percy/cypress": "3.1.1",
     "babel-eslint": "10.0.1",
     "cypress-cucumber-preprocessor": "4.2.0",
     "eslint": "5.16.0",
