--- a/cypress/package/package.json
+++ b/cypress/package/package.json
@@ -2,8 +2,5 @@
   "name": "@zava-tests/example",
   "version": "1.1.0",
   "description": "Cucumber Step Definitions and Page Objects for Example",
-  "main": "index.js",
-  "dependencies": {
-    "cypress-cucumber-preprocessor": "2.5.0"
-  }
+  "main": "index.js"
 }
