--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   ...
   "scripts": {
-    "cypress:open:local": "CYPRESS_ENV=true cypress open",
-    "cypress:open:staging": "CYPRESS_ENV=true cypress open --env configFile=staging",
-    "cypress:open:production": "CYPRESS_ENV=true cypress open --env configFile=production",
-    "cypress:test:local": "CYPRESS_ENV=true ./node_modules/.bin/cypress-tags run --env TAGS=\"@<define-tag>\"",
-    "cypress:test:jenkins": "NO_COLOR=1 CYPRESS_ENV=true ./node_modules/.bin/cypress-tags run --env TAGS=\"@<define-tag>\" --env configFile=jenkins",
-    "cypress:test:staging": "NO_COLOR=1 CYPRESS_ENV=true ./node_modules/.bin/cypress-tags run --env TAGS=\"@e2e\" --env configFile=staging",
-    "cypress:test:production": "NO_COLOR=1 CYPRESS_ENV=true ./node_modules/.bin/cypress-tags run --env TAGS=\"@e2e\" --env configFile=production",
+    "cypress:open:local": "CONFIG_FILE=local CYPRESS_ENV=true cypress open",
+    "cypress:open:staging": "CONFIG_FILE=staging CYPRESS_ENV=true cypress open",
+    "cypress:open:production": "CONFIG_FILE=production CYPRESS_ENV=true cypress open",
+    "cypress:test:local": "CONFIG_FILE=local CYPRESS_ENV=true cypress run --env TAGS=\"@<define-tag>\"",
+    "cypress:test:jenkins": "CONFIG_FILE=jenkins NO_COLOR=1 CYPRESS_ENV=true cypress run --env TAGS=\"@<define-tag>\"",
+    "cypress:test:staging": "CONFIG_FILE=staging NO_COLOR=1 CYPRESS_ENV=true cypress run --env TAGS=\"@e2e\"",
+    "cypress:test:production": "CONFIG_FILE=production NO_COLOR=1 CYPRESS_ENV=true cypress run --env TAGS=\"@e2e\"",
     "cypress:report": "allure generate allure-results --clean -o allure-report && allure open allure-report",
-    "visdiff:run": "NO_COLOR=1 CYPRESS_ENV=true percy exec -- cypress run --spec **/vizdiffs/*.feature --env configFile=staging",
+    "visdiff:run": "CONFIG_FILE=staging NO_COLOR=1 CYPRESS_ENV=true percy exec -- cypress run --env TAGS=\"@visual-diffs\"",
     "visdiff:verify": "percy build:wait"
   },
   "dependencies": {
@@ -17,7 +17,7 @@
     "@percy/cli": "1.0.0-beta.68",
     "@percy/cypress": "3.1.1",
     "babel-eslint": "10.0.1",
-    "cypress-cucumber-preprocessor": "4.2.0",
+    "@badeball/cypress-cucumber-preprocessor": "11.5.1",
     "eslint": "5.16.0",
     "mocha": "6.2.0",
     "mocha-allure-reporter": "1.4.0"
