--- a/cypress/package.json
+++ b/cypress/package.json
@@ -14,11 +14,15 @@
     "cypress:test:staging": "CONFIG_FILE=staging NO_COLOR=1 CYPRESS_ENV=true cypress run --env TAGS=\"@e2e-staging\"",
     "cypress:test:production": "CONFIG_FILE=production NO_COLOR=1 CYPRESS_ENV=true cypress run --env TAGS=\"@e2e-production\"",
     "cypress:test:jenkins": "CONFIG_FILE=jenkins NO_COLOR=1 CYPRESS_ENV=true cypress run --env TAGS=\"@integration\"",
-    "cypress:report": "allure generate allure-results --clean -o allure-report && allure open allure-report"
+    "cypress:report": "allure generate allure-results --clean -o allure-report && allure open allure-report",
+    "visdiff:test": "NO_COLOR=1 CYPRESS_ENV=true percy exec -- cypress run --config videos=false --spec **/vizdiffs/*.feature --env configFile=staging",
+    "visdiff:wait": "percy build:wait"
   },
   "dependencies": {
     "@badeball/cypress-cucumber-preprocessor": "19.1.0",
     "@cypress/webpack-preprocessor": "5.12.0",
+    "@percy/cli": "1.28.9",
+    "@percy/cypress": "3.1.2",
     "allure-commandline": "2.29.0",
     "allure-cypress": "2.15.1",
     "cypress": "13.4.0",
