--- a/cypress/Dockerfile
+++ b/cypress/Dockerfile
@@ -4,4 +4,8 @@ WORKDIR /e2e
 
 ADD cypress/ /e2e/
 
+# To use percy visual diffs, we need to add the .git
+# directory otherwise not commit data is sent
+ADD .git/ /e2e/.git/
+
 RUN npm ci
