--- a/cypress/Dockerfile
+++ b/cypress/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /e2e
 ADD cypress/ /e2e/
 
 # To use percy visual diffs, we need to add the .git
-# directory otherwise not commit data is sent
+# directory otherwise no commit data is sent
 ADD .git/ /e2e/.git/
 
 RUN npm ci
